# voicetranslator

./: .gitignore  AGENTS.md  AUTONOMY.md  Directory.Build.props  Directory.Packages.props  NORTH_STAR.md  README.md  RESEARCH.md  ROADMAP.md  START Voice Translator.cmd  VoiceTranslator.slnx  fix_tests.py
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/adr/: 001-local-python-worker.md
docs/research/: 001-local-translation-models.md
models/manifests/: nllb-600m.json  whisper-large-v3-turbo.json  whisper-medium.json  whisper-small.json  xtts-v2.json
ops/autopilot/: README.md  autopilot.py  voicetranslator-autopilot-configure  voicetranslator-autopilot-stop-all.service  voicetranslator-autopilot-update  voicetranslator-autopilot.service  voicetranslator-autopilot.timer
specs/001-realtime-voice-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/VoiceTranslator.App/: App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  VoiceTranslator.App.csproj
src/VoiceTranslator.Application/: VoiceTranslator.Application.csproj
src/VoiceTranslator.Gateway/: Program.cs  VoiceTranslator.Gateway.csproj
src/VoiceTranslator.Infrastructure.Audio/: VoiceTranslator.Infrastructure.Audio.csproj
src/VoiceTranslator.Infrastructure.Cloud/: VoiceTranslator.Infrastructure.Cloud.csproj
src/VoiceTranslator.Infrastructure.LocalWorker/: IWorkerHealthProbe.cs  IWorkerLauncher.cs  IWorkerProcess.cs  IWorkerProcessStarter.cs  LaunchedWorker.cs  LocalWorkerClient.cs  LocalWorkerHealthProbe.cs  (+7 more)
worker/: bootstrap.ps1  pyproject.toml
worker/tests/: test_api.py  test_asr.py  test_auth.py  test_gpu_profiles.py  test_languages.py  test_main.py  test_model_download_cli.py  test_model_manager.py  test_preflight.py  test_privacy.py  test_recovery.py  test_runtime.py  test_synthesis.py  test_translation.py
worker/voice_translator_worker/: __init__.py  api.py  auth.py  main.py  runtime.py
worker/voice_translator_worker/models/: __init__.py  download.py  gpu_profiles.py  model_manager.py
worker/voice_translator_worker/pipeline/: __init__.py  asr.py  languages.py  preflight.py  recovery.py  service.py  synthesis.py  translation.py
worker/voice_translator_worker/privacy/: __init__.py  session_store.py
(+91 files in other folders)
