[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "voice-translator-worker"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.128.0",
  "httpx>=0.28,<0.29",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.12,<3",
  "python-multipart>=0.0.20,<0.1",
  "uvicorn[standard]>=0.38,<0.39",
]

[project.scripts]
voice-translator-models = "voice_translator_worker.models.download:main"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.optional-dependencies]
test = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
]
ml = [
  "coqui-tts[cuda,codec]>=0.27.4,<0.28",
  "ctranslate2>=4.6,<5",
  "faster-whisper>=1.2,<2",
  "huggingface-hub>=0.34,<1",
  "sentencepiece>=0.2,<0.3",
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "transformers>=4.57,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["voice_translator_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-p", "no:cacheprovider"]
